PH-17: Rework measurements around TimeSeries identity